# LockedIn

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  main.py  pyproject.toml
backend/api/: applications.py
backend/core/: settings.py
backend/enums/: job_application.py
backend/model/: job_application.py
backend/orm/: schema.py
backend/services/: __init__.py  crud_service.py  database_service.py  session_manager.py
backend/tests/: conftest.py  test_application_api.py
frontend/: .dockerignore  .env.local.example  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/configurations/: page.tsx
frontend/components/: add-record.tsx  app-sidebar.tsx  dashboard-content.tsx  providers.tsx  toast-conf.tsx
frontend/components/dashboard/: columns.tsx
frontend/components/data-grid/: data-grid-cell-variants.tsx  data-grid-context-menu.tsx  data-grid-filter-menu.tsx  data-grid-sort-menu.tsx
frontend/components/ui/: dropdown-menu.tsx  sortable.tsx  table.tsx
frontend/hooks/: Dashboard.ts  use-data-grid.ts  useDashboardData.ts
frontend/lib/: data-grid.ts  mockData.ts
frontend/types/: dashboard.ts  declarations.d.ts
